fix long headers texts overflowing on mobile

--- a/resources/assets/styles/utils/_typography.scss
+++ b/resources/assets/styles/utils/_typography.scss
@@ -71,6 +71,10 @@ $c-paragraph-max-width: 45rem !default;
 %u-header {
   @include header($styles: null);
 
+  // Prevent long words overflowing on mobile
+  overflow: hidden;
+  overflow-wrap: break-word;
+
   > a {
     color: inherit;
     text-decoration: none;
